[project]
name = "telegram-vote-bot"
version = "0.1.0"
description = "Telegram Vote Bot with subscription verification and participant management"
requires-python = ">=3.11"
dependencies = [
    "pyrogram==1.4.16",
    "tgcrypto==1.2.5",
    "motor==3.3.2",
    "apscheduler==3.10.4",
    "pymongo==4.8.0",
]

[tool.uv]
# Exclude problematic dependencies
constraint-dependencies = []
